--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
@@ -138,7 +138,7 @@
                                 </div>
                                 <div class="button-submit">
                                     @*<a href="@Url.Action("list","products")" class="btn saveAddrBtn">Continue Shopping</a>*@
-                                    <a href="@Url.Action("list","products")" class="btn saveAddrBtn">Continue Shopping</a>
+                                    <a href="@Url.Action("list","products")" class="saveAddrBtn">Continue Shopping</a>
                                     @*<a href="@Url.Action("Index","Test")" class="btn btn-block cash-btn cashbtn" name="submitNewsletter"> Proceed To Payment</a>*@
                                 </div>
 
