CE2-T78 Search Bar No Image task completed Imported from Changeset 2790

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3588,3 +3588,8 @@ body {
 .nb_featuredPrdCarrousle .prd_amnt {
     padding: 6px 6px !important;
 }
+
+.no-serach-results {
+    padding: 12px !important;
+    margin-left: 8px !important;
+}
