little bug fix Imported from Changeset 2791

--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -199,9 +199,8 @@
             </div>
             <div class="col-md-12">
                 <div class="nb_prod_bottomdes">
-                    <h3 class="head">Description</h3>
                     <p class="content">
-                        @Model.Description;
+                        @Model.Description
                     </p>
                 </div>
             </div>
