--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -112,6 +112,7 @@
     @*@Scripts.Render("~/bundles/modernizr")*@
 
     @RenderSection("scripts", required: false)
+    <script src="~/Scripts/javascript-product-by-attribute.js"></script>
     <script src="~/Scripts/javascript-searchproduct.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <script src="~/Content/Theme/University/app/js/owl.carousel.min.js"></script>
