--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Ganedata.Core.Entities.Domain
+@using Ganedata.Core.Entities.Enums
 @model WarehouseEcommerce.ViewModels.ProductDetailViewModel
 @if (Model.productMasterList.Count > 0)
 {
+    @Html.Partial("_ProductByAttributeSelectorModal")
     <section class="nb_sec nb_feat_prod_sec">
         <div class="container">
             <div class="nb_header_style1">
@@ -18,11 +20,62 @@
                                 <span class="prd_img">
                                     <img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@item.Name" title="@item.Name" class="img-fluid center-block" />
                                 </span>
+                            </a>
+                            <div class="nb_fp_boxwrap">
                                 <div class="prd_det_sec">
                                     <h4 title="@item.Name" class="prd_name">@item.Name</h4>
-                                    <span class="prd_amnt"> @Model.CurrencySign@item.SellPrice</span>
+                                    <ul class="foot">
+                                        <li>
+                                            <a class="prd_amnt pull-left" href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">
+                                                @ViewBag.CurrencySymbol@item.SellPrice
+                                            </a>
+                                        </li>
+                                        @if (item.ProductType != ProductKitTypeEnum.Grouped && item.ProductType != ProductKitTypeEnum.Kit)
+                                        {
+                                            var totaltems = item.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && !u.IsNotification);
+
+                                            <li>
+                                                @if (totaltems == null)
+                                                {
+                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="AddToWishList(@item.ProductId, false)"><i class="icon-love list-icon pull-right" style="color: black;font-size: 28px;"></i></a>
+                                                }
+                                                else
+                                                {
+                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="RemoveWishListPopUp(@item.ProductId,false)"><i class="icon-love list-icon pull-right" style="color: red;font-size: 28px;"></i></a>
+                                                }
+                                            </li>
+
+                                            <li>
+                                                @if (item.SellPrice > 0 && item.SellPrice.HasValue && @item.PercentMargin > 0 && item.ProductType != ProductKitTypeEnum.ProductByAttribute)
+                                                {
+                                                    if (item.InventoryStocks.Sum(i => i.Available) > 0)
+                                                    {
+                                                        <a href="javascript:;" onclick="addToCart(@item.ProductId)"><i class="icon-shopping-cart list-icon pull-right"></i></a>
+                                                    }
+
+                                                }
+                                                else if (@item.SellPrice > 0 && @item.SellPrice.HasValue && @item.PercentMargin > 0 && item.ProductType == ProductKitTypeEnum.ProductByAttribute)
+                                                {
+                                                    <a href="javascript:;" onclick="showProductByAttributeSelector('@item.SKUCode')"><i class="icon-shopping-cart pull-right"></i></a>
+                                                }
+                                                else
+                                                {
+                                                    var totalwishlistitems = item.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && u.IsNotification);
+
+                                                    if (totalwishlistitems == null)
+                                                    {
+                                                        <a href="javascript:;" onclick="AddWishListItemStockNotAvailable(@item.ProductId)" class="notification-bell_@item.ProductId"><i class="fa fa-bell-o list-icon pull-right" style="color:black"></i></a>
+                                                    }
+                                                    else
+                                                    {
+                                                        <a href="javascript:;" onclick="removeNotifyProduct(@item.ProductId,true)" class="notification-bell_@item.ProductId"><i class="fa fa-bell-o list-icon pull-right" style="color: red"></i></a>
+                                                    }
+                                                }
+                                            </li>
+                                        }
+                                    </ul>
                                 </div>
-                            </a>
+                            </div>
                         </div>
 
                     }
