--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
@@ -158,7 +158,7 @@
                                     </fieldset>
                                 </div>
                                 <div class="button-submit">
-                                    <a href="@Url.Action("Index","Home")" class="btn saveAddrBtn">Back</a>
+                                    <a href="@Url.Action("Index","Home")" class="saveAddrBtn">Continue Shopping</a>
                                 </div>
 
 
