--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -2125,7 +2125,7 @@ input[type="number"]::-webkit-outer-spin-button {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
     }
 
         .prd_lst_boxouter .foot .prd_amnt {
@@ -2147,7 +2147,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
             .prd_lst_boxouter .foot .icolist li {
                 float: left;
-                margin: 0px 8px;
+                margin: 0px 5px;
             }
 
                 .prd_lst_boxouter .foot .icolist li a i {
