--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
@@ -4,7 +4,7 @@
 @if (Model.productMasterList.Count > 0)
 {
     @Html.Partial("_ProductByAttributeSelectorModal")
-    <section class="nb_sec nb_feat_prod_sec">
+    <section class="nb_sec nb_feat_prod_sec feature-product-overflow">
         <div class="container">
             <div class="nb_header_style1">
                 <h3>Featured Products</h3>
